# FitHuman

./: .gitignore  DEPLOYMENT.md  README.md
FitHuman.xcodeproj/: project.pbxproj
FitHuman.xcodeproj/project.xcworkspace/xcuserdata/mbodapud.xcuserdatad/: UserInterfaceState.xcuserstate
FitHuman.xcodeproj/xcshareddata/xcschemes/: FitHuman.xcscheme
FitHuman.xcodeproj/xcuserdata/mbodapud.xcuserdatad/xcschemes/: xcschememanagement.plist
FitHuman/App/: FitHumanApp.swift
FitHuman/Models/: AuthModels.swift  WaterModels.swift  WorkoutModels.swift
FitHuman/Services/: AppConfig.swift  BackendAPIClient.swift  KeychainTokenStore.swift
FitHuman/ViewModels/: AuthSessionViewModel.swift  WaterViewModel.swift  WorkoutViewModel.swift
FitHuman/Views/: MainTabView.swift  RootView.swift
FitHuman/Views/Auth/: AuthView.swift
FitHuman/Views/Profile/: ProfileView.swift
FitHuman/Views/Water/: WaterTrackerView.swift
FitHuman/Views/Workout/: ActiveWorkoutView.swift  CaloriesBurnedView.swift  PlanSetupView.swift  RestTimerView.swift  StreakCelebrationView.swift  StreakLabel.swift  WorkoutPlanView.swift
backend/: .dockerignore  .env.example  API_DESIGN.md  Dockerfile  README.md  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: deps.py  routes_auth.py  routes_users.py  routes_water.py  routes_workouts.py
backend/app/core/: config.py  security.py
backend/app/db/: mongo.py
backend/app/services/: gemini.py
backend/app/utils/: mongo.py
backend/tests/: test_day_key.py  test_security.py  test_water_schema.py  test_workout_dates.py  test_workout_schema.py
