[project]
name = "fithuman-backend"
version = "0.1.0"
description = "FitHuman production API for auth, profiles, workout plans, and tracking."
requires-python = ">=3.11,<3.14"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "motor>=3.6.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
